--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <a class="link" href="#">About</a>
             <a class="link" href="#">Blog</a>
             <a class="link" href="#">Projects</a>
+            <a class="link" href="#">Collaborations</a>
           </li>
         </ul>
       </nav>
