--- a/index.html
+++ b/index.html
@@ -6,28 +6,18 @@
       href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/d5b3867511.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="selfindex.css" />
     <style>
       body{  background-image: url("https://i.ibb.co/Nntm5rg/professional-background-images-hd-2.jpg");
         background-position:bottom;
         background-size:cover;
         background-attachment: fixed;}
+
     </style>
   </head>
   <body>
     <div class="wrapper-normal">
-      <img src="https://i.ibb.co/JdQTFN3/Memyselfandi.jpg" alt="Nice to meet
-      you!" border="0" width="175" height="250"></img>
-      <h1 class="title">Allyson Phillips</h1>
-      <h2 class="description">Student/Creator/Gamer</h2>
-      <div class="social-links">
-        <a1
-          class="link"
-          data-title="LinkedIn"
-          href="https://www.linkedin.com/in/allyson-phillips-311b4a184/"
-          target="_blank">
-        </a1>
-      </div>
       <nav class="nav-home">
         <ul class="list">
           <li class="item">
@@ -38,6 +28,21 @@
           </li>
         </ul>
       </nav>
+      <h1 class="title">Allyson Phillips</h1>
+      <img src="https://i.ibb.co/JdQTFN3/Memyselfandi.jpg" alt="Nice to meet
+      you!" border="0" width="200" height="275"></img>
+      <h2 class="description">Student/Developer/Creator/Gamer</h2>
+      <div class="social-links">
+      <ul class="go"> 
+        <li class="lt">
+          <a2 class="link" href="#"><i class="fas fa-at"></i></a2>
+          <a2 class="link" href="#"><i class="fab fa-github"></i></a2>
+          <a2 class="link" href="#"><i class="fab fa-spotify"></i></a2>
+          <a2 class="link" href="#"><i class="fab fa-linkedin"></i></a2>
+        </li>
+      </ul>
+      </div>
+
       <footer class="footer-main">© Allyson Phillips 2020</footer>
     </div>
   </body>
