Updating(Pre-Launch)

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <h2 class="description">Student/Developer/Creator/Gamer</h2>
       <div class="social-links">
       <ul class="go"> 
-        <li class="lt">
-          <a2 class="link" href="#"><i class="fas fa-at"></i></a2>
-          <a2 class="link" href="#"><i class="fab fa-github"></i></a2>
-          <a2 class="link" href="#"><i class="fab fa-spotify"></i></a2>
-          <a2 class="link" href="#"><i class="fab fa-linkedin"></i></a2>
+        <li class="item">
+          <a class="link" href="Cl0udF1sh@hotmail.com"><i class="fas fa-at"></i></a>
+          <a class="link" href="https://github.com/LittleGreenTonberry"><i class="fab fa-github"></i></a>
+          <a class="link" href="https://open.spotify.com/?_ga=2.191442346.1409810070.1585172741-511060354.1583451690"><i class="fab fa-spotify"></i></a>
+          <a class="link" href="https://www.linkedin.com/in/allyson-phillips-311b4a184/"><i class="fab fa-linkedin"></i></a>
         </li>
       </ul>
       </div>
