--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <nav class="nav-home">
         <ul class="list">
           <li class="item">
-            <a class="link" href="#">About</a>
-            <a class="link" href="#">Blog</a>
-            <a class="link" href="#">Projects</a>
-            <a class="link" href="#">Collaborations</a>
+            <a class="link" href="allysonphillips.com/about">About</a>
+            <a class="link" href="allysonphillips.com/blog">Blog</a>
+            <a class="link" href="allysonphillips.com/projects">Projects</a>
+            <a class="link" href="allysonphillips.com/collab">Collaborations</a>
           </li>
         </ul>
       </nav>
@@ -37,7 +37,7 @@
         <li class="item">
           <a class="link" href="Cl0udF1sh@hotmail.com"><i class="fas fa-at"></i></a>
           <a class="link" href="https://github.com/LittleGreenTonberry"><i class="fab fa-github"></i></a>
-          <a class="link" href="https://open.spotify.com/?_ga=2.191442346.1409810070.1585172741-511060354.1583451690"><i class="fab fa-spotify"></i></a>
+          <a class="link" href="spotify:user:matmd5w1i0u22e1sno2l2y6g5"><i class="fab fa-spotify"></i></a>
           <a class="link" href="https://www.linkedin.com/in/allyson-phillips-311b4a184/"><i class="fab fa-linkedin"></i></a>
         </li>
       </ul>
