Update2(multi-page)

--- a/blog.html
+++ b/blog.html
@@ -14,10 +14,10 @@
           <nav class="nav-home">
             <ul class="list">
               <li class="item">
-                  <a class="link" href="allysonphillips.com">Home</a>
-                <a class="link" href="allysonphillips.com/about">About</a>
-                <a class="link" href="allysonphillips.com/projects">Projects</a>
-                <a class="link" href="allysonphillips.com/collab">Collaborations</a>
+                <a class="link" href="../index.html">Home</a>
+                <a class="link" href="../about.html">About</a>
+                <a class="link" href="../collab.html">Collab</a>
+                <a class="link" href="../projects.html">Projects</a>
               </li>
               </ul>
           </nav>
