--- a/collab.html
+++ b/collab.html
@@ -14,12 +14,14 @@
           <nav class="nav-home">
             <ul class="list">
               <li class="item">
-                  <a class="link" href="allysonphillips.com/">Home</a>
-                <a class="link" href="allysonphillips.com/about">About</a>
-                <a class="link" href="allysonphillips.com/blog">Blog</a>
-                <a class="link" href="allysonphillips.com/projects">Projects</a>
+                  <a class="link" href="../index.html">Home</a>
+                <a class="link" href="../about.html">About</a>
+                <a class="link" href="../blog.html">Blog</a>
+                <a class="link" href="../projects.html">Projects</a>
               </li>
-  <body>
+            </ul>
+          </nav>
+        </div>
     <div class="social-links">
         <ul class="go"> 
           <li class="item">
