--- a/about.html
+++ b/about.html
@@ -14,12 +14,15 @@
           <nav class="nav-home">
             <ul class="list">
               <li class="item">
-                <a class="link" href="allysonphillips.com">Home</a>
-                <a class="link" href="allysonphillips.com/blog">Blog</a>
-                <a class="link" href="allysonphillips.com/projects">Projects</a>
-                <a class="link" href="allysonphillips.com/collab">Collaborations</a>
+                <a class="link" href="../index.html">Home</a>
+                <a class="link" href="../collab.html">Collab</a>
+                <a class="link" href="../blog.html">Blog</a>
+                <a class="link" href="../projects.html">Projects</a>
               </li>
-  <body>
+            </ul>
+          </nav>
+        </div>
+    
     <div class="social-links">
         <ul class="go"> 
           <li class="item">
