--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,12 @@
           </li>
         </ul>
         </div>
-  
+        <article>
+            <ins datetime="YYYY-MM-DDThh:mm:ssTZD"></ins>
+            <h2>Macchiatos, Dirty, Rotten Lies, and Other Unbreakable Laws of Nature </h2>
+            <p>ethical thundercats sustainable locavore quinoa Neutra. Aesthetic tacky sweater single-origin coffee, bicycle rights organic lo-fi street art american apparel ennui four loko ethnic Brooklyn small batch. Forage YOLO polaroid</p>
+          
+          </article>
         <footer class="footer-main">© Allyson Phillips 2020</footer>
       </div>
     </body>
