--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <nav class="nav-home">
         <ul class="list">
           <li class="item">
-            <a class="link" href="allysonphillips.com/about">About</a>
-            <a class="link" href="allysonphillips.com/blog">Blog</a>
-            <a class="link" href="allysonphillips.com/projects">Projects</a>
-            <a class="link" href="allysonphillips.com/collab">Collaborations</a>
+            <a class="link" href="/about">About</a>
+            <a class="link" href="/blog">Blog</a>
+            <a class="link" href="/projects">Projects</a>
+            <a class="link" href="/collab">Collaborations</a>
           </li>
         </ul>
       </nav>
