--- a/collab.html
+++ b/collab.html
@@ -22,6 +22,7 @@
             </ul>
           </nav>
         </div>
+        <h2>Under Construction</h2>
     <div class="social-links">
         <ul class="go"> 
           <li class="item">
